# research-assistant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
docs/prompts/: llmlingua_compression.md
outputs/bibtex/: ContextualJudge.bib
outputs/extracted/: ContextualJudge.txt
outputs/prompts/: ContextualJudge.prompt.md
prompts/: implement_repo.md  summary_prompt.md
prompts/templates/: summary.md
src/: extract.py  get_bibtex.py  llm_provider.py  pipeline.py  summarise.py
summaries/: ContextualJudge_summary.md
tests/: test_extract.py  test_get_bibtex.py  test_pipeline.py
