[project]
name = "research-assistant"
version = "0.1.0"
description = "Personal paper reading assistant: extract PDF annotations and generate structured research summaries via Claude"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "anthropic>=0.40",
]

[project.scripts]
extract = "src.extract:main"
summarise = "src.summarise:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
