[project]
name = "research-assistant"
version = "0.1.0"
description = "Personal paper reading assistant: extract PDF annotations and generate structured research summaries via Claude"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "anthropic>=0.40",
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
    "beautifulsoup4>=4.12",
]

[project.scripts]
extract = "src.extract:main"
summarise = "src.summarise:main"
pipeline = "src.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
